--- a/style.css
+++ b/style.css
@@ -5,7 +5,31 @@
     font-family: Arial, sans-serif;
 }
 body{
-    background: #8ebef8;
+    background: #0b4768;
+}
+h1{
+    text-align: center;
+    color: #fff;
+    margin-top: 20px;
+    font-size: 54px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-family: Arial, sans-serif;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+    animation: headingFadeIn 1.2s ease-in-out;
+}
+
+@keyframes headingFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px) scale(0.95);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
 }
 .container{
     width: 400px;
@@ -14,21 +38,22 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #fff;
+    background: #ffffff;
     border-radius: 10px;
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
 
 }
 .container p{
     font-weight: 600px;
-   font-size: 15px;
+   font-size: 20px;
    margin-bottom: 8px;
+   padding-bottom: 15px;
 }
 .container input{
     width: 100%;
     height: 50%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #424242;
     outline: none;
     padding: 10px 15px;
     border-radius: 5px;
@@ -59,6 +84,7 @@ body{
     font-weight: bold;
     transition: background-color 0.3s ease;
     cursor: pointer;
+    
 }
 .container button:hover{
     background: #45a049;
